# FlipDistAstar

./: .gitignore  CMakeLists.txt  README.md  random_25.sh  random_30.sh  random_all_approaches_up_to_20.sh  sealevel_25_25.sh  sealevel_30_30.sh  sealevel_small_orders_25_30.sh
data/: purge.py
data/evaluation/: evaluation_notebook.ipynb
data/random_experiments_paper/n_10/: results_bfs.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_simple.csv
data/random_experiments_paper/n_10/set_0/: points  results_eppstein.csv  results_simple.csv  (+1 more)
data/random_experiments_paper/n_15/: results_bfs.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_simple.csv
data/random_experiments_paper/n_20/: results_bfs.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_simple.csv
data/random_experiments_paper/n_25/: results_eppstein.csv  results_heuristic.csv  results_simple.csv
data/random_experiments_paper/n_30/: results_eppstein.csv  results_heuristic.csv  results_simple.csv
include/AStarFlipDistance/: AStarFlipDistance.hpp  BasicDataStructures.hpp  BiDirectionalBfs.hpp  FlipIlp.hpp  FlipIlpEdgeBased.hpp  GeometricObjects.hpp  Geometry.hpp  HeuristicDistanceCalculator.hpp  HigherOrderDelaunayObjects.hpp  HungarianPrimDual.hpp  ListHandler.hpp  StaticTriangulation.hpp  TriangulationHandler.hpp
src/: AStarFlipDistance.cpp  BiDirectionalBfs.cpp  GeometricObjects.cpp  Geometry.cpp  HeuristicDistanceCalculater.cpp  HungarianPrimDual.cpp  ListHandler.cpp  StaticTriangulation.cpp  TriangulationHandler.cpp  main.cpp
(+1949 files in other folders)
